thirdparty/tr7/tests/test-expr.scm
;
; vim: noai ts=3 sw=3 expandtab
(import (tr7 trace))
(tr7-show-eval #t)
(tr7-show-result #t)
(tr7-show-prompt #t)

(import (tr7 expr))

(define-syntax test
  (syntax-rules ()
    ((_ . x) (for-each display (list '(expr . x) " => " (expr . x) "\n")))))

(define one   1)
(define two   2)
(define three 3)
(define four  4)
(define five  5)

(test five)
(test 10)
(test - 5)
(test 10 ^ 3)
(test 100 % 16)
(test 100 // 16)
(test 100 / 16)
(test 100 * 16)
(test 100 - 16)
(test 100 + 16)
(test (100 + 16))
(test 2 * (10 - 5))
(test 4 - 1 - 1)

(test four - one - one)
(test ((even? four)))
(test ((odd? four)))

(test 4 < 5)
(test 5 < 4)
(test 5 < 5)
(test 4 > 5)
(test 5 > 4)
(test 5 > 5)
(test 4 = 5)
(test 5 = 4)
(test 5 = 5)
(test 4 <= 5)
(test 5 <= 4)
(test 5 <= 5)
(test 4 >= 5)
(test 5 >= 4)
(test 5 >= 5)
(test 4 <> 5)
(test 5 <> 4)
(test 5 <> 5)

(test four > two and "ok")
(test four < two and "not ok")
(test four > two or "not ok")
(test four < two or " ok")
(test 1 < 2 eqv 7 > 8)
(test 1 < 2 eqv 7 < 8)
(test 1 > 2 eqv 7 > 8)
(test 1 > 2 eqv 7 < 8)
(test 1 < 2 not eqv 7 > 8)
(test 1 < 2 not eqv 7 < 8)
(test 1 > 2 not eqv 7 > 8)
(test 1 > 2 not eqv 7 < 8)
(test 1 < 2 implies 7 > 8)
(test 1 < 2 implies 7 < 8)
(test 1 > 2 implies 7 > 8)
(test 1 > 2 implies 7 < 8)

(test #t or  1 // 0 < 0 and #t)
(test #f or  #f and 1 // 0 < 0)

(test 100 // 2 + 2)
(test 100 // 2 + 2 * 5)
(test 100 // 2 // 5 + 2 * 5)
(test 100 // 2 // 5 - 5 + 2 * 5 - 10)

(test 5 6)

